--- a/.eslintrc
+++ b/.eslintrc
@@ -57,10 +57,12 @@
         ],
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-inferrable-types": "off",
+        "no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars": [
             "warn",
             {
-                "argsIgnorePattern": "^_"
+                "argsIgnorePattern": "^_.*",
+                "varsIgnorePattern": "^_.*"
             }
         ],
         "@typescript-eslint/no-use-before-define": [
