--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "scripts": {
         "dev": "npm-run-all -p dev:!(app)",
         "dev:server": "echo 'no dev:server script'",
-        "dev:web": "vue-cli-service serve --env development --deep-monitoring --source-map-support",
+        "dev:web": "npm run compile:build:client:config && concurrently \"npm run compile:dev:client:config\" \"vue-cli-service serve --env development --deep-monitoring --source-map-support\"",
         "//1": "",
         "dev:app": "npm run build:web && cap sync && cap run",
         "dev:app:android": "npm run build:web && cap sync && cap run android",
         "dev:app:ios": "npm run build:web && cap sync && cap run ios",
+        "//1b": "",
+        "compile:dev:server:config": "cross-env NODE_ENV=development ENVIRONMENT=server gulp",
+        "compile:dev:client:config": "cross-env NODE_ENV=development ENVIRONMENT=client gulp",
         "//2": "",
         "build": "npm-run-all -p build:!(app)",
         "build:server": "echo 'no build:server script'",
-        "build:web": "cross-env NODE_OPTIONS=--no-warnings vue-cli-service build",
+        "build:web": "npm run compile:build:client:config && cross-env NODE_OPTIONS=--no-warnings vue-cli-service build",
+        "//2b": "",
+        "compile:build:server:config": "cross-env NODE_ENV=production ENVIRONMENT=server gulp",
+        "compile:build:client:config": "cross-env NODE_ENV=production ENVIRONMENT=client gulp",
         "//3": "",
         "build:app": "npm run build:web && cap copy && cap sync && cap open",
         "build:app:android": "npm run build:web && cap copy && cap sync && cap open android",
@@ -115,15 +121,18 @@
         "@vue/test-utils": "^2.1.0",
         "babel-plugin-istanbul": "^6.1.1",
         "chai": "^4.3.6",
+        "concurrently": "^7.5.0",
         "cypress": "^10.10.0",
         "eslint": "^8.26.0",
         "eslint-import-resolver-typescript": "^3.5.2",
         "eslint-plugin-boilerplate": "./dev/eslint-plugin-boilerplate",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-vue": "^9.6.0",
+        "gulp": "^4.0.2",
         "husky": "^8.0.1",
         "i": "^0.3.7",
         "is-ci": "^3.0.1",
+        "json-to-ts": "^1.7.0",
         "lint-staged": "^13.0.3",
         "native-run": "^1.7.1",
         "npm": "^8.19.2",
