--- a/package.json
+++ b/package.json
@@ -17,23 +17,28 @@
         "dev:app:android": "npm run build:web && cap sync && cap run android",
         "dev:app:ios": "npm run build:web && cap sync && cap run ios",
         "//1b": "",
-        "compile:dev:server:config": "cross-env NODE_ENV=development ENVIRONMENT=server gulp",
-        "compile:dev:client:config": "cross-env NODE_ENV=development ENVIRONMENT=client gulp",
+        "compile:dev:server:config": "cross-env NODE_ENV=development TS_CONFIG_PATH=src/server/tsconfig.json ENVIRONMENT=server gulp",
+        "compile:dev:client:config": "cross-env NODE_ENV=development TS_CONFIG_PATH=src/client/tsconfig.json ENVIRONMENT=client gulp",
         "//2": "",
         "build": "npm-run-all -p build:!(app)",
         "build:server": "echo 'no build:server script'",
         "build:web": "npm run compile:build:client:config && cross-env NODE_OPTIONS=--no-warnings vue-cli-service build",
         "//2b": "",
-        "compile:build:server:config": "cross-env NODE_ENV=production ENVIRONMENT=server gulp",
-        "compile:build:client:config": "cross-env NODE_ENV=production ENVIRONMENT=client gulp",
+        "compile:build:server:config": "cross-env NODE_ENV=production TS_CONFIG_PATH=src/server/tsconfig.json ENVIRONMENT=server gulp",
+        "compile:build:client:config": "cross-env NODE_ENV=production TS_CONFIG_PATH=src/client/tsconfig.json ENVIRONMENT=client gulp",
         "//3": "",
         "build:app": "npm run build:web && cap copy && cap sync && cap open",
         "build:app:android": "npm run build:web && cap copy && cap sync && cap open android",
         "build:app:ios": "npm run build:web && cap copy && cap sync && cap open ios",
         "//4": "",
         "test": "npm run test:unit && npm run test:e2e",
-        "test:unit": "cross-env NODE_ENV=test nyc vue-cli-service test:unit ./tests/unit/client/index.spec.ts",
+        "test:unit": "npm run test:unit:server && npm run test:unit:client",
+        "test:unit:server": "echo 'no test:unit:server script",
+        "test:unit:client": "npm run compile:test:unit:client:config && cross-env NODE_ENV=test nyc vue-cli-service test:unit ./tests/unit/client/index.spec.ts",
         "test:e2e": "vue-cli-service test:e2e",
+        "//4b": "",
+        "compile:test:unit:server:config": "cross-env NODE_ENV=test TS_CONFIG_PATH=tests/unit/server/tsconfig.json ENVIRONMENT=server gulp",
+        "compile:test:unit:client:config": "cross-env NODE_ENV=test TS_CONFIG_PATH=tests/unit/client/tsconfig.json ENVIRONMENT=client gulp",
         "//5": "",
         "lint": "npm-run-all -p lint:*",
         "lint:script": "vue-cli-service lint",
