--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "test:unit": "npm run test:unit:server && npm run test:unit:client",
         "test:unit:server": "echo 'no test:unit:server script",
         "test:unit:client": "npm run compile:test:unit:client:config && cross-env NODE_ENV=test nyc vue-cli-service test:unit ./tests/unit/client/index.spec.ts",
-        "test:e2e": "vue-cli-service test:e2e",
+        "test:e2e": "cross-env NODE_OPTIONS=--no-warnings vue-cli-service test:e2e",
         "//4b": "",
         "compile:test:unit:server:config": "cross-env NODE_ENV=test TS_CONFIG_PATH=tests/unit/server/tsconfig.json ENVIRONMENT=server gulp",
         "compile:test:unit:client:config": "cross-env NODE_ENV=test TS_CONFIG_PATH=tests/unit/client/tsconfig.json ENVIRONMENT=client gulp",
@@ -95,26 +95,26 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-decorators": "^7.19.6",
+        "@babel/plugin-proposal-decorators": "^7.20.2",
         "@capacitor/cli": "4.0.1",
-        "@commitlint/cli": "^17.1.2",
-        "@commitlint/config-conventional": "^17.1.0",
+        "@commitlint/cli": "^17.2.0",
+        "@commitlint/config-conventional": "^17.2.0",
         "@ionic/cli": "^6.20.3",
         "@types/app-root-path": "^1.2.4",
-        "@types/chai": "^4.3.3",
+        "@types/chai": "^4.3.4",
         "@types/compression": "^1.7.2",
         "@types/csurf": "^1.11.2",
         "@types/express": "^4.17.14",
         "@types/express-session": "^1.17.5",
         "@types/hpp": "^0.2.2",
-        "@types/http-errors": "^1.8.2",
-        "@types/lodash": "^4.14.186",
+        "@types/http-errors": "^2.0.1",
+        "@types/lodash": "^4.14.188",
         "@types/mocha": "^10.0.0",
         "@types/ms": "^0.7.31",
-        "@types/node": "^18.11.3",
+        "@types/node": "^18.11.9",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.40.1",
-        "@typescript-eslint/parser": "^5.40.1",
+        "@typescript-eslint/eslint-plugin": "^5.42.1",
+        "@typescript-eslint/parser": "^5.42.1",
         "@vue/cli-plugin-babel": "^5.0.8",
         "@vue/cli-plugin-e2e-cypress": "^5.0.8",
         "@vue/cli-plugin-eslint": "^5.0.8",
@@ -123,43 +123,43 @@
         "@vue/cli-plugin-unit-mocha": "^5.0.8",
         "@vue/cli-service": "^5.0.8",
         "@vue/eslint-config-typescript": "^11.0.2",
-        "@vue/test-utils": "^2.1.0",
+        "@vue/test-utils": "^2.2.2",
         "babel-plugin-istanbul": "^6.1.1",
-        "chai": "^4.3.6",
+        "chai": "^4.3.7",
         "concurrently": "^7.5.0",
-        "cypress": "^10.10.0",
-        "eslint": "^8.26.0",
+        "cypress": "^10.11.0",
+        "eslint": "^8.27.0",
         "eslint-import-resolver-typescript": "^3.5.2",
         "eslint-plugin-boilerplate": "./dev/eslint-plugin-boilerplate",
         "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-vue": "^9.6.0",
+        "eslint-plugin-vue": "^9.7.0",
         "gulp": "^4.0.2",
-        "husky": "^8.0.1",
+        "husky": "^8.0.2",
         "i": "^0.3.7",
         "is-ci": "^3.0.1",
         "json-to-ts": "^1.7.0",
         "lint-staged": "^13.0.3",
         "native-run": "^1.7.1",
-        "npm": "^8.19.2",
+        "npm": "^9.1.1",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
         "random-input-generator": "^1.0.0",
-        "sass": "^1.55.0",
-        "sass-loader": "^13.1.0",
-        "stylelint": "^14.14.0",
-        "stylelint-config-clean-order": "^1.0.0",
-        "stylelint-config-standard-scss": "^5.0.0",
+        "sass": "^1.56.1",
+        "sass-loader": "^13.2.0",
+        "stylelint": "^14.15.0",
+        "stylelint-config-clean-order": "^2.1.0",
+        "stylelint-config-standard-scss": "^6.1.0",
         "ts-loader": "^9.4.1",
         "ts-node": "^10.9.1",
-        "ts-plugin-type-coverage": "^2.22.0",
+        "ts-plugin-type-coverage": "^2.23.0",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
         "tsutils": "^3.21.0",
         "ttypescript": "^1.5.13",
         "type-coverage": "^2.22.0",
-        "type-fest": "^3.1.0",
+        "type-fest": "^3.2.0",
         "typescript": "^4.8.4",
         "typescript-coverage-report": "^0.6.4",
-        "webpack": "^5.74.0",
+        "webpack": "^5.75.0",
         "yaml-loader": "^0.8.0"
     }
 }
