--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "npm": "~8.18.0",
         "node": ">= 16.16.0"
     },
+    "bin": "bin/index.js",
     "scripts": {
         "dev": "npm-run-all -p dev:!(app)",
         "dev:server": "echo 'no dev:server script'",
@@ -69,6 +70,7 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "file-type": "^18.0.0",
+        "fs-extra": "^11.1.0",
         "helmet": "^6.0.0",
         "hpp": "^0.2.3",
         "http-errors": "^2.0.0",
@@ -78,6 +80,7 @@
         "localforage": "^1.10.0",
         "lodash": "^4.17.21",
         "minimatch": "^5.1.0",
+        "mkdirp": "^1.0.4",
         "ms": "^2.1.3",
         "normalize-url": "^8.0.0",
         "on-change": "^4.0.1",
@@ -89,6 +92,7 @@
         "vue": "^3.2.45",
         "vue-router": "^4.1.6",
         "yaml": "^2.1.3",
+        "yargs": "^17.6.2",
         "zod": "^3.19.1"
     },
     "devDependencies": {
@@ -111,6 +115,7 @@
         "@types/ms": "^0.7.31",
         "@types/node": "^18.11.9",
         "@types/uuid": "^8.3.4",
+        "@types/yargs": "^17.0.17",
         "@typescript-eslint/eslint-plugin": "^5.42.1",
         "@typescript-eslint/parser": "^5.42.1",
         "@vue/cli-plugin-babel": "^5.0.8",
@@ -141,6 +146,7 @@
         "npm": "^9.1.1",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
+        "prompts": "^2.4.2",
         "random-input-generator": "^1.0.0",
         "sass": "^1.56.1",
         "sass-loader": "^13.2.0",
