--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,15 @@ jobs:
                   key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
                   restore-keys: |
                       ${{ runner.os }}-node-
+
             - name: Install dependencies
               run: npm ci --no-optional
 
             - name: Run linting
               run: npm run lint
+
+            - name: Run type coverage
+              run: npm run type-coverage
+
+            - name: Run tests
+              run: npm run test
