--- a/package.json
+++ b/package.json
@@ -45,7 +45,12 @@
         "lint:script": "vue-cli-service lint",
         "lint:style": "stylelint **/*.scss",
         "//6": "",
-        "type-coverage": "typescript-coverage-report -o ./coverage/type-report",
+        "type-coverage": "npm-run-all -s type-coverage:* && npm-run-all -s type-coverage:test:*:*",
+        "type-coverage:prepare": "make-dir ./coverage/type-report/client && make-dir ./coverage/type-report/server && make-dir ./coverage/type-report/tests/unit/client && make-dir ./coverage/type-report/tests/unit/server",
+        "type-coverage:client": "typescript-coverage-report -p ./src/client/tsconfig.json -o ./coverage/type-report/client",
+        "type-coverage:server": "typescript-coverage-report -p ./src/server/tsconfig.json -o ./coverage/type-report/server",
+        "type-coverage:test:unit:client": "typescript-coverage-report -p ./tests/unit/client/tsconfig.json -o ./coverage/type-report/tests/unit/client",
+        "type-coverage:test:unit:server": "typescript-coverage-report -p ./tests/unit/server/tsconfig.json -o ./coverage/type-report/tests/unit/server",
         "prepare": "cd dev/eslint-plugin-boilerplate && npm run build && cd ../.. && is-ci || husky install"
     },
     "dependencies": {
@@ -140,6 +145,7 @@
         "is-ci": "^3.0.1",
         "json-to-ts": "^1.7.0",
         "lint-staged": "^13.1.0",
+        "make-dir-cli": "^3.0.0",
         "npm": "^9.2.0",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
