--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
                       ${{ runner.os }}-node-
 
             - name: Install dependencies
-              run: npm ci --no-optional
+              run: npm install
 
             - name: Run linting
               run: npm run lint
