--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,5 +43,5 @@ jobs:
             - name: Run type coverage
               run: npm run type-coverage
 
-            - name: Run tests
-              run: npm run test
+            # - name: Run unit tests
+            #   run: npm run test:unit
