--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
         "@babel/plugin-proposal-decorators": "^7.21.0",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
         "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+        "@babel/plugin-transform-modules-commonjs": "^7.21.2",
         "@babel/preset-env": "^7.21.4",
         "@capacitor/cli": "4.0.1",
         "@commitlint/cli": "^17.6.1",
