--- a/package.json
+++ b/package.json
@@ -93,13 +93,19 @@
         "on-change": "^4.0.2",
         "pg": "^8.10.0",
         "pg-native": "^3.0.1",
+        "process": "^0.11.10",
         "reflect-metadata": "^0.1.13",
+        "setimmediate": "^1.0.5",
         "sql.js": "^1.8.0",
+        "triple-beam": "^1.3.0",
         "tslib": "^2.5.0",
         "typeorm": "^0.3.12",
+        "util": "^0.12.5",
         "uuid": "^9.0.0",
         "vue": "^3.2.47",
         "vue-router": "^4.1.6",
+        "winston": "^3.8.2",
+        "winston-daily-rotate-file": "^4.7.1",
         "yaml": "^2.2.1",
         "yargs": "^17.7.1",
         "zod": "^3.21.4"
